--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 .blog-content {
     padding: 20px;
-    width: 65%;
+    width: 55%;
 }
 
 .blog-date {
@@ -524,7 +524,7 @@ body.dark-theme .blog-content h3 { color: var(--honey); }
                 <i class="fa-brands fa-whatsapp social-icon" style="color:#25d366"></i>
                 <span style="font-weight:bold">WhatsApp</span>
             </a>
-            <a href="mailto:jamalsamuel23@yahoo.com" class="social-item">
+            <a href="mailto:wiseandhealthyliving@yahoo.com" class="social-item">
                 <i class="fa-solid fa-envelope social-icon" style="color:var(--honey)"></i>
                 <span style="font-weight:bold">Email Us</span>
             </a>
