--- a/about.html
+++ b/about.html
@@ -97,6 +97,10 @@
         h2 { color: var(--dark-green); text-align: center; }
         body.dark-theme h2 { color: var(--honey); }
 
+        li {
+            text-align: left;
+        }
+        
         footer {
             text-align: center;
             padding: 40px;
@@ -136,7 +140,7 @@ font-size: 0.8rem;
 
 <section class="hero-about">
     <h1>Our Vision</h1>
-    <p>Bridging the gap between ancient botanical wisdom and modern science.</p>
+    <p>Bridging the gap between herbal wisdom and modern scientific findings</p>
 </section>
 
 <div class="content-container">
