--- a/index.html
+++ b/index.html
@@ -721,6 +721,70 @@ body.dark-theme .recent-tag {
                 <button class="print-btn" onclick="window.print()"><i class="fa-solid fa-print"></i></button>
             </div>
         </div>
+
+        <div class="card" data-tags="dental pain antioxidants immunity digestion cloves eugenol">
+    <div class="card-top">
+        <div class="read-time"><i class="fa-regular fa-clock"></i> <span class="minutes"></span> min read</div>
+        <span class="tag">Oral & Immune Health</span>
+        <h3>Cloves</h3>
+        <p>Contains high concentrations of eugenol, a compound clinically recognized for its analgesic and antiseptic properties.</p>
+        <div class="more-content">
+            <p>Often used for dental pain and digestive motility. Cloves are a massive source of polyphenols, aiding in the reduction of systemic oxidative stress.</p>
+            <div class="source-link">
+                <i class="fa-solid fa-microscope"></i> <strong>Scientific Source:</strong>
+                <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3819475/" target="_blank">Braz J Microbiol Research</a>
+            </div>
+        </div>
+        <button class="read-more-btn" onclick="toggleReadMore(this, 'Cloves')">Read More...</button>
+    </div>
+    <div class="card-actions">
+        <button class="share-btn" onclick="copyCardLink(this, 'Cloves')"><i class="fa-solid fa-share-nodes"></i></button>
+        <button class="print-btn" onclick="window.print()"><i class="fa-solid fa-print"></i></button>
+    </div>
+</div>
+
+        <div class="card" data-tags="antibacterial gut health sibo immunity oregano carvacrol">
+    <div class="card-top">
+        <div class="read-time"><i class="fa-regular fa-clock"></i> <span class="minutes"></span> min read</div>
+        <span class="tag">Microbiome Support</span>
+        <h3>Oregano</h3>
+        <p>Rich in carvacrol and thymol, offering potent antimicrobial activity against a variety of pathogens.</p>
+        <div class="more-content">
+            <p>Clinically studied for its role in managing SIBO (Small Intestinal Bacterial Overgrowth) and respiratory infections. It acts as a powerful volatile oil for the immune system.</p>
+            <div class="source-link">
+                <i class="fa-solid fa-microscope"></i> <strong>Scientific Source:</strong>
+                <a href="https://pubmed.ncbi.nlm.nih.gov/24779581/" target="_blank">Global Advances in Health and Medicine</a>
+            </div>
+        </div>
+        <button class="read-more-btn" onclick="toggleReadMore(this, 'Oregano')">Read More...</button>
+    </div>
+    <div class="card-actions">
+        <button class="share-btn" onclick="copyCardLink(this, 'Oregano')"><i class="fa-solid fa-share-nodes"></i></button>
+        <button class="print-btn" onclick="window.print()"><i class="fa-solid fa-print"></i></button>
+    </div>
+</div>
+
+        <div class="card" data-tags="circulation metabolism pain relief cayenne pepper capsaicin">
+    <div class="card-top">
+        <div class="read-time"><i class="fa-regular fa-clock"></i> <span class="minutes"></span> min read</div>
+        <span class="tag">Circulatory Catalyst</span>
+        <h3>Cayenne Pepper</h3>
+        <p>Utilizes capsaicin to stimulate circulation and boost metabolic rate through thermogenesis.</p>
+        <div class="more-content">
+            <p>Acts as a "catalyst" herb; by increasing blood flow, it helps transport the active compounds of other herbs more efficiently to the cells.</p>
+            <div class="source-link">
+                <i class="fa-solid fa-microscope"></i> <strong>Scientific Source:</strong>
+                <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4477151/" target="_blank">Open Heart (BMJ Journal)</a>
+            </div>
+        </div>
+        <button class="read-more-btn" onclick="toggleReadMore(this, 'Cayenne Pepper')">Read More...</button>
+    </div>
+    <div class="card-actions">
+        <button class="share-btn" onclick="copyCardLink(this, 'Cayenne Pepper')"><i class="fa-solid fa-share-nodes"></i></button>
+        <button class="print-btn" onclick="window.print()"><i class="fa-solid fa-print"></i></button>
+    </div>
+</div>
+
     </div>
 </div>
 
