--- a/index.html
+++ b/index.html
@@ -449,6 +449,7 @@ body.dark-theme .recent-tag {
 <nav>
     <a href="#home">Home</a>
     <a href="#remedies">Remedies</a>
+    <a href="remedy-parings.html">Parings</a>
     <a href="blog.html">Blog</a>
     <a href="about.html">About</a>
     <a href="#contact">Contact</a>
