--- a/remedy-pairing.html
+++ b/remedy-pairing.html
@@ -89,6 +89,16 @@
     <p>Why 1 + 1 often equals 3 in herbal medicine.</p>
 </header>
 
+    <section class="container" style="padding-bottom: 20px;">
+    <div style="background: var(--white); padding: 30px; border-radius: 15px; border: 1px solid rgba(0,0,0,0.05); box-shadow: 0 4px 10px rgba(0,0,0,0.02);">
+        <h2 style="color: var(--dark-green); margin-top: 0;">Additive vs. Synergistic Effects</h2>
+        <p>In herbalism, most people understand <strong>Additive</strong> effects: $1 + 1 = 2$. If you take an herb for sleep and an herb for pain, you get both benefits. However, our focus is on <strong>Synergism</strong>: $1 + 1 = 3$.</p>
+        
+        <p>Synergy occurs when one botanical compound alters the <strong>pharmacokinetics</strong> of another—improving its absorption, slowing its breakdown in the liver, or enhancing its ability to cross the blood-brain barrier. By understanding these pairings, we can achieve greater therapeutic results with smaller, safer doses.</p>
+    </div>
+</section>
+
+
 <div class="container">
     
     <div class="synergy-card">
