--- a/index.html
+++ b/index.html
@@ -795,6 +795,20 @@ body.dark-theme .recent-tag {
     <p id="fact-text"></p>
 </section>
 
+    <section class="synergy-teaser" style="background: var(--cream); padding: 60px 20px; text-align: center; border-top: 3px solid var(--honey); border-bottom: 3px solid var(--honey); margin: 40px 0;">
+    <div style="max-width: 800px; margin: auto;">
+        <i class="fa-solid fa-flask-vial" style="font-size: 3rem; color: var(--mid-green); margin-bottom: 20px;"></i>
+        <h2 style="color: var(--dark-green); margin-bottom: 15px;">Unlock Herbal Synergism</h2>
+        <p style="font-size: 1.1rem; color: var(--text-color); margin-bottom: 25px;">
+            Did you know that Turmeric is <strong>2,000% more effective</strong> when paired with Black Pepper? 
+            In the world of natural science, some herbs were meant to work together.
+        </p>
+        <a href="remedy-pairing.html" class="search-btn" style="text-decoration: none; padding: 15px 40px;">
+            Explore Remedy Pairings <i class="fa-solid fa-bolt" style="margin-left: 10px;"></i>
+        </a>
+    </div>
+</section>
+
     <section class="container" id="blog-preview">
     <h2 style="text-align: center; color: var(--dark-green); margin-bottom: 40px; margin-top: 0px;">From the Wisdom Blog</h2>
     <div class="blog-preview-grid">
