--- a/glossary.html
+++ b/glossary.html
@@ -107,8 +107,12 @@
 <body>
 
 <nav>
-    <a href="index.html">HOME</a>
-    <a href="blog.html">BLOG</a>
+    <a href="#home">Home</a>
+    <a href="#remedies">Remedies</a>
+    <a href="remedy-parings.html">Parings</a>
+    <a href="blog.html">Blog</a>
+    <a href="about.html">About</a>
+    <a href="#contact">Contact</a>
 </nav>
 
 <header>
@@ -144,11 +148,28 @@
         </div>
     </section>
 
+        <section id="E" class="glossary-section">
+        <div class="letter-header">E</div>
+        <div class="term-card">
+            <strong>Enzymatic Inhibition</strong>
+    When one substance (like Piperine) temporarily "distracts" a liver enzyme so another substance (like Curcumin) can slip past.
+       </div>
+    </section>
+
     <section id="H" class="glossary-section">
         <div class="letter-header">H</div>
         <div class="term-card">
             <strong>HPA Axis</strong>
             The Hypothalamic-Pituitary-Adrenal axis; our central stress response system that controls cortisol levels.
+        </div>
+    </section>
+
+    
+    <section id="P" class="glossary-section">
+        <div class="letter-header">P</div>
+        <div class="term-card">
+            <strong>Pharmacokinetics</strong>
+              The study of how the body moves a substance through absorption, distribution, metabolism, and excretion.
         </div>
     </section>
 
