--- a/remedy-pairing.html
+++ b/remedy-pairing.html
@@ -167,6 +167,21 @@
         </div>
     </div>
 
+    <section class="container" style="margin-top: 40px;">
+    <div style="background: #fff5f5; padding: 30px; border-radius: 15px; border: 2px solid #feb2b2; color: #742a2a;">
+        <h3 style="margin-top: 0;"><i class="fa-solid fa-triangle-exclamation"></i> Safety & Interactions</h3>
+        <p>While herbal synergy can enhance wellness, it is vital to remember that "more effective" also means "more potent." Please consider the following:</p>
+        <ul style="line-height: 1.8;">
+            <li><strong>The "Grapefruit Effect":</strong> Just as black pepper increases absorption, certain compounds can inhibit enzymes that metabolize prescription medications, leading to dangerously high levels in the bloodstream.</li>
+            <li><strong>Blood Thinners:</strong> Pairings involving Cayenne, Garlic, or Ginger can enhance the effects of anticoagulant medications (like Warfarin or Aspirin).</li>
+            <li><strong>Consult a Professional:</strong> If you are pregnant, nursing, or taking maintenance medication for blood pressure or diabetes, always consult your healthcare provider before introducing concentrated herbal pairings.</li>
+        </ul>
+        <p style="font-size: 0.85rem; font-style: italic; margin-top: 15px;">
+            *This information is for educational purposes and has not been evaluated by the FDA.
+        </p>
+    </div>
+</section>
+
 </div>
 
 <footer style="text-align: center; padding: 40px; background: var(--dark-green); color: white;">
