--- a/remedy-pairing.html
+++ b/remedy-pairing.html
@@ -76,12 +76,12 @@
 <body>
 
 <nav>
-    <a href="#home">Home</a>
-    <a href="#remedies">Remedies</a>
+    <a href="index.html">Home</a>
+    <a href="indrx.html#remedies">Remedies</a>
 <a href="remedy-pairing.html" style="color: var(--honey);">Pairings</a>
     <a href="blog.html">Blog</a>
     <a href="about.html">About</a>
-    <a href="#contact">Contact</a>
+    <a href="index.html#contact">Contact</a>
 </nav>
 
 <header class="pairing-header">
