--- a/remedy-pairing.html
+++ b/remedy-pairing.html
@@ -185,6 +185,32 @@
 </div>
 
 <footer style="text-align: center; padding: 40px; background: var(--dark-green); color: white;">
+    <section class="container" style="margin-top: 40px; border-top: 1px solid #ddd; padding-top: 20px;">
+    <h4 style="color: var(--dark-green);">Clinical Evidence & Research</h4>
+    <ul style="font-size: 0.9rem; list-style-type: none; padding-left: 0;">
+        <li style="margin-bottom: 15px;">
+            <i class="fa-solid fa-book-open" style="color: var(--honey);"></i> 
+            <strong>Turmeric & Pepper:</strong> Shoba G, et al. (1998). Influence of piperine on the pharmacokinetics of curcumin in animals and human volunteers. 
+            <a href="https://pubmed.ncbi.nlm.nih.gov/9619120/" target="_blank">PubMed ID: 9619120</a>
+        </li>
+        <li style="margin-bottom: 15px;">
+            <i class="fa-solid fa-book-open" style="color: var(--honey);"></i> 
+            <strong>Garlic & Cayenne (Circulation):</strong> Ried K. (2016). Garlic lowers blood pressure in hypertensive individuals, regulates serum cholesterol, and stimulates immunity. 
+            <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4734823/" target="_blank">PMC Article: 4734823</a>
+        </li>
+        <li style="margin-bottom: 15px;">
+            <i class="fa-solid fa-book-open" style="color: var(--honey);"></i> 
+            <strong>Ashwagandha (Lipophilic nature):</strong> G. Singh, et al. (2021). Bioavailability Enhancement of Curcuminoids and Withanolides. 
+            <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8539134/" target="_blank">PMC Article: 8539134</a>
+        </li>
+        <li style="margin-bottom: 15px;">
+            <i class="fa-solid fa-book-open" style="color: var(--honey);"></i> 
+            <strong>Peppermint & Caraway:</strong> May B, et al. (2000). Efficacy of a fixed peppermint oil/caraway oil combination in non-ulcer dyspepsia. 
+            <a href="https://pubmed.ncbi.nlm.nih.gov/11149444/" target="_blank">PubMed ID: 11149444</a>
+        </li>
+    </ul>
+</section>
+
     <p>&copy; 2026 Wise & Healthy Living | Synergy Guide</p>
 </footer>
 
