--- a/remedy-pairing.html
+++ b/remedy-pairing.html
@@ -201,6 +201,46 @@
     </div>
 </div>
 
+<section class="container" style="margin-top: 40px;">
+    <div style="background: var(--dark-green); color: white; padding: 30px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+        <h3 style="color: var(--honey); border-bottom: 1px solid rgba(255,255,255,0.2); padding-bottom: 10px;">
+            <i class="fa-solid fa-book"></i> The Science Glossary
+        </h3>
+        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 20px;">
+            
+            <div>
+                <strong style="color: var(--honey);">Bioavailability:</strong>
+                <p style="font-size: 0.9rem; margin-top: 5px;">The percentage of a substance that successfully reaches your bloodstream to perform its function. Many herbs have low bioavailability without a "carrier" or "activator."</p>
+            </div>
+
+            <div>
+                <strong style="color: var(--honey);">Lipophilic:</strong>
+                <p style="font-size: 0.9rem; margin-top: 5px;">"Fat-loving." This refers to compounds that dissolve in fats or oils rather than water. These require healthy fats for the body to absorb them properly.</p>
+            </div>
+
+            <div>
+                <strong style="color: var(--honey);">Pharmacokinetics:</strong>
+                <p style="font-size: 0.9rem; margin-top: 5px;">The "journey" of a remedy through the body—specifically how it is absorbed, distributed, metabolized, and eventually excreted.</p>
+            </div>
+
+            <div>
+                <strong style="color: var(--honey);">Synergism:</strong>
+                <p style="font-size: 0.9rem; margin-top: 5px;">When two substances interact in a way that their combined effect is greater than the sum of their individual effects ($1 + 1 = 3$).</p>
+            </div>
+
+            <div>
+                <strong style="color: var(--honey);">Vasodilator:</strong>
+                <p style="font-size: 0.9rem; margin-top: 5px;">A substance that widens blood vessels. In herbalism, herbs like Cayenne act as vasodilators to "push" other nutrients through the circulatory system.</p>
+            </div>
+
+            <div>
+                <strong style="color: var(--honey);">Antispasmodic:</strong>
+                <p style="font-size: 0.9rem; margin-top: 5px;">A compound that suppresses muscle spasms. This is key for digestive pairings (like Peppermint) that aim to relax the smooth muscle of the gut.</p>
+            </div>
+
+        </div>
+    </div>
+</section>
 
     <section class="container" style="margin-top: 40px;">
     <div style="background: #fff5f5; padding: 30px; border-radius: 15px; border: 2px solid #feb2b2; color: #742a2a;">
