--- a/remedy-pairing.html
+++ b/remedy-pairing.html
@@ -96,7 +96,7 @@
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="indrx.html#remedies">Remedies</a>
+    <a href="index.html#remedies">Remedies</a>
 <a href="remedy-pairing.html" style="color: var(--honey);">Pairings</a>
     <a href="blog.html">Blog</a>
     <a href="about.html">About</a>
