--- a/remedy-pairing.html
+++ b/remedy-pairing.html
@@ -245,10 +245,8 @@
                 <strong>The Result:</strong> Reduced efficacy for muscle relaxation or bone density. Best taken in a specific 2:1 ratio or at different times of day.
             </p>
         </div>
-
     </div>
 </section>
-
     
     <section class="container" id="printableChecklist">
     <div style="background: var(--white); border: 2px dashed var(--honey); padding: 30px; border-radius: 15px;">
@@ -311,6 +309,43 @@
     </div>
     </section>
 
+<section class="container" style="margin-top: 60px;">
+    <div style="text-align: center; margin-bottom: 40px;">
+        <h2 style="color: var(--dark-green);">The Wise Daily Protocol</h2>
+        <p>A sample schedule to maximize absorption and prevent nutrient blocking.</p>
+    </div>
+
+    <div style="position: relative; border-left: 4px solid var(--honey); padding-left: 30px; margin-left: 20px;">
+        
+        <div style="margin-bottom: 40px; position: relative;">
+            <div style="position: absolute; left: -42px; top: 0; background: var(--honey); width: 20px; height: 20px; border-radius: 50%; border: 4px solid white;"></div>
+            <h3 style="color: var(--mid-green); margin-top: 0;"><i class="fa-solid fa-sun"></i> 07:00 AM - Energy & Metabolism</h3>
+            <p><strong>Herbs:</strong> Moringa, Ginger, or Green Tea with Lemon.</p>
+            <p style="font-size: 0.9rem; border-left: 3px solid #eee; padding-left: 15px;">
+                <em>Strategy:</em> Use the citrus synergy to stabilize antioxidants. <strong>Note:</strong> Keep coffee 2 hours away from Iron-rich Moringa.
+            </p>
+        </div>
+
+        <div style="margin-bottom: 40px; position: relative;">
+            <div style="position: absolute; left: -42px; top: 0; background: var(--honey); width: 20px; height: 20px; border-radius: 50%; border: 4px solid white;"></div>
+            <h3 style="color: var(--mid-green); margin-top: 0;"><i class="fa-solid fa-cloud-sun"></i> 12:00 PM - Digestive & Heart Support</h3>
+            <p><strong>Herbs:</strong> Garlic, Cayenne, or Turmeric (with meal).</p>
+            <p style="font-size: 0.9rem; border-left: 3px solid #eee; padding-left: 15px;">
+                <em>Strategy:</em> Take Turmeric with a meal containing healthy fats and black pepper for a 2,000% absorption boost.
+            </p>
+        </div>
+
+        <div style="margin-bottom: 40px; position: relative;">
+            <div style="position: absolute; left: -42px; top: 0; background: var(--honey); width: 20px; height: 20px; border-radius: 50%; border: 4px solid white;"></div>
+            <h3 style="color: var(--mid-green); margin-top: 0;"><i class="fa-solid fa-moon"></i> 08:00 PM - Rest & Restoration</h3>
+            <p><strong>Herbs:</strong> Ashwagandha, Lavender, or Peppermint.</p>
+            <p style="font-size: 0.9rem; border-left: 3px solid #eee; padding-left: 15px;">
+                <em>Strategy:</em> Combine Ashwagandha with a small amount of fat (like warm milk or coconut oil) to ensure the lipophilic compounds reach the nervous system.
+            </p>
+        </div>
+
+    </div>
+</section>
 
 <section class="container" style="margin-top: 40px;">
     <div style="background: var(--dark-green); color: white; padding: 30px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
