--- a/remedy-pairing.html
+++ b/remedy-pairing.html
@@ -126,7 +126,7 @@
     <section class="container" style="padding-bottom: 20px;">
     <div style="background: var(--white); padding: 30px; border-radius: 15px; border: 1px solid rgba(0,0,0,0.05); box-shadow: 0 4px 10px rgba(0,0,0,0.02);">
         <h2 style="color: var(--dark-green); margin-top: 0;">Additive vs. Synergistic Effects</h2>
-        <p>In herbalism, most people understand <strong>Additive</strong> effects: $1 + 1 = 2$. If you take an herb for sleep and an herb for pain, you get both benefits. However, our focus is on <strong>Synergism</strong>: $1 + 1 = 3$.</p>
+        <p>In herbalism, most people understand <strong>Additive</strong> effects: $1 + $1 = $2. If you take an herb for sleep and an herb for pain, you get both benefits. However, our focus is on <strong>Synergism</strong>: $1 + $1 = $3.</p>
         
         <p>Synergy occurs when one botanical compound alters the <strong>pharmacokinetics</strong> of another—improving its absorption, slowing its breakdown in the liver, or enhancing its ability to cross the blood-brain barrier. By understanding these pairings, we can achieve greater therapeutic results with smaller, safer doses.</p>
     </div>
@@ -346,6 +346,31 @@
 
     </div>
 </section>
+
+    <div class="container" style="margin-top: 20px;">
+    <div style="background: #f0f4f8; border-left: 5px solid var(--mid-green); padding: 25px; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
+        <h4 style="color: var(--dark-green); margin-top: 0; display: flex; align-items: center; gap: 10px;">
+            <i class="fa-solid fa-clock-rotate-left"></i> The Science of Chronotherapy
+        </h4>
+        <p style="font-size: 0.95rem; line-height: 1.6; color: #444;">
+            Your body doesn't process nutrients the same way at 7 AM as it does at 7 PM. This protocol is based on <strong>Chronotherapy</strong>—the practice of timing botanical intake to match your <strong>Circadian Rhythm</strong>.
+        </p>
+        
+        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; margin-top: 15px; font-size: 0.85rem;">
+            <div style="background: white; padding: 10px; border-radius: 8px;">
+                <strong style="color: var(--honey);">Morning Focus:</strong> Aligning with your peak <strong>Cortisol</strong> levels to manage stress and energy metabolism.
+            </div>
+            <div style="background: white; padding: 10px; border-radius: 8px;">
+                <strong style="color: var(--honey);">Evening Focus:</strong> Supporting the natural rise of <strong>Melatonin</strong> and slowing down the metabolic "fire" for restorative sleep.
+            </div>
+        </div>
+
+        <p style="font-size: 0.85rem; margin-top: 15px; border-top: 1px solid #d1d9e0; padding-top: 10px; font-style: italic;">
+            Note: Consistency is more important than perfect timing. If you miss a "window," simply take your remedy with your next meal.
+        </p>
+    </div>
+</div>
+
 
 <section class="container" style="margin-top: 40px;">
     <div style="background: var(--dark-green); color: white; padding: 30px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
