--- a/remedy-pairing.html
+++ b/remedy-pairing.html
@@ -405,6 +405,19 @@
             <i class="fa-solid fa-camera"></i> Save Protocol to Phone
         </button>
     </div>
+
+    <div style="text-align: center; margin-top: 15px; display: flex; justify-content: center; gap: 10px;">
+    <p style="width: 100%; font-size: 0.8rem; color: #666; margin-bottom: 10px;">Share your Synergy Plan:</p>
+    
+    <a id="share-twitter" href="#" target="_blank" style="background: #000; color: white; width: 40px; height: 40px; border-radius: 50%; display: flex; align-items: center; justify-content: center; text-decoration: none;">
+        <i class="fa-brands fa-x-twitter"></i>
+    </a>
+
+    <a id="share-pinterest" href="#" target="_blank" style="background: #bd081c; color: white; width: 40px; height: 40px; border-radius: 50%; display: flex; align-items: center; justify-content: center; text-decoration: none;">
+        <i class="fa-brands fa-pinterest"></i>
+    </a>
+</div>
+
 </section>
 
 <section class="container" style="margin-top: 40px;">
@@ -431,7 +444,7 @@
 
             <div>
                 <strong style="color: var(--honey);">Synergism:</strong>
-                <p style="font-size: 0.9rem; margin-top: 5px;">When two substances interact in a way that their combined effect is greater than the sum of their individual effects ($1 + 1 = 3$).</p>
+                <p style="font-size: 0.9rem; margin-top: 5px;">When two substances interact in a way that their combined effect is greater than the sum of their individual effects ($1 + $1 = $3).</p>
             </div>
 
             <div>
@@ -553,6 +566,16 @@ function downloadProtocol() {
         selectors.style.display = 'flex';
     });
 }
+        function updateSocialLinks() {
+    const pageUrl = encodeURIComponent(window.location.href);
+    const text = encodeURIComponent("I just built my custom herbal synergy protocol! Check out these science-backed pairings:");
+    
+    document.getElementById('share-twitter').href = `https://twitter.com/intent/tweet?url=${pageUrl}&text=${text}`;
+    document.getElementById('share-pinterest').href = `https://pinterest.com/pin/create/button/?url=${pageUrl}&description=${text}`;
+}
+
+// Call this inside your generateProtocol() function so the links are always ready
+updateSocialLinks();
     </script>
 </body>
 </html>
