--- a/remedy-pairing.html
+++ b/remedy-pairing.html
@@ -480,6 +480,49 @@
 </div>
 
 <footer style="text-align: center; padding: 40px; background: var(--dark-green); color: white;">
+
+    <section class="container" style="margin-top: 80px; margin-bottom: 40px;">
+    <div style="background: var(--white); border-radius: 20px; overflow: hidden; display: flex; flex-wrap: wrap; box-shadow: 0 10px 30px rgba(0,0,0,0.05); border: 1px solid #eee;">
+        
+        <div style="background: var(--dark-green); color: white; padding: 40px; flex: 1; min-width: 300px;">
+            <h2 style="color: var(--honey);">Expert Guidance</h2>
+            <p>Do you have a complex question about herb-drug interactions or building a specific protocol?</p>
+            <ul style="list-style: none; padding: 0; margin-top: 20px; line-height: 2;">
+                <li><i class="fa-solid fa-check-double" style="color: var(--honey);"></i> Science-backed answers</li>
+                <li><i class="fa-solid fa-check-double" style="color: var(--honey);"></i> Safety-first approach</li>
+                <li><i class="fa-solid fa-check-double" style="color: var(--honey);"></i> Personalized synergy tips</li>
+            </ul>
+        </div>
+
+        <div style="padding: 40px; flex: 2; min-width: 300px;">
+            <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
+                    <div>
+                        <label style="display:block; font-size: 0.8rem; font-weight: bold;">Name</label>
+                        <input type="text" name="name" required style="width:100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
+                    </div>
+                    <div>
+                        <label style="display:block; font-size: 0.8rem; font-weight: bold;">Email</label>
+                        <input type="email" name="email" required style="width:100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
+                    </div>
+                </div>
+
+                <div style="margin-top: 20px;">
+                    <label style="display:block; font-size: 0.8rem; font-weight: bold;">Your Inquiry</label>
+                    <textarea name="message" rows="4" required style="width:100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;" placeholder="Describe your health goals or specific herb questions..."></textarea>
+                </div>
+
+                <button type="submit" style="margin-top: 20px; background: var(--mid-green); color: white; border: none; padding: 12px 30px; border-radius: 8px; cursor: pointer; font-weight: bold; width: 100%;">
+                    Send Clinical Inquiry
+                </button>
+                <p style="font-size: 0.7rem; color: #999; margin-top: 10px; text-align: center;">
+                    <i class="fa-solid fa-lock"></i> Your information is kept confidential and used only for consultation purposes.
+                </p>
+            </form>
+        </div>
+    </div>
+</section>
+
     <section class="container" style="margin-top: 40px; border-top: 1px solid #ddd; padding-top: 20px;">
     <h4 style="color: var(--dark-green);">Clinical Evidence & Research</h4>
     <ul style="font-size: 0.9rem; list-style-type: none; padding-left: 0;">
