--- a/remedy-pairing.html
+++ b/remedy-pairing.html
@@ -523,6 +523,14 @@
     </div>
 </section>
 
+    <div class="disclaimer-box">
+        <strong>MEDICAL DISCLAIMER:</strong> This site does not provide medical advice. 
+        <br>
+        <a href="disclaimer.html" style="color: var(--honey); text-decoration: underline; margin-right: 15px;">Read Disclaimer</a>
+        <a href="privacy.html" style="color: var(--honey); text-decoration: underline;">Privacy Policy</a>
+    </div>
+    <p style="font-size: 0.85rem; opacity: 0.8;"><i class="fa-regular fa-calendar-check"></i> Research Last Verified: <span id="lastUpdated"></span></p>
+    
     <section class="container" style="margin-top: 40px; border-top: 1px solid #ddd; padding-top: 20px;">
     <h4 style="color: var(--dark-green);">Clinical Evidence & Research</h4>
     <ul style="font-size: 0.9rem; list-style-type: none; padding-left: 0;">
