--- a/remedy-pairing.html
+++ b/remedy-pairing.html
@@ -84,6 +84,19 @@
     color: white;
 }
 
+           /* Desktop override: If the screen is large, don't swipe, show them side-by-side */
+    @media (min-width: 800px) {
+        div[style*="scroll-snap-type"] {
+            overflow-x: visible !important;
+            flex-wrap: wrap !important;
+        }
+        div[style*="flex: 0 0 100%"] {
+            flex: 1 !important;
+            min-width: 350px !important;
+        }
+        .mobile-only { display: none; }
+    }
+
 
         @media (max-width: 600px) {
             .synergy-card { flex-direction: column; text-align: center; }
@@ -480,11 +493,10 @@
 </div>
 
 <footer style="text-align: center; padding: 40px; background: var(--dark-green); color: white;">
-
-    <section class="container" style="margin-top: 80px; margin-bottom: 40px;">
-    <div style="background: var(--white); border-radius: 20px; overflow: hidden; display: flex; flex-wrap: wrap; box-shadow: 0 10px 30px rgba(0,0,0,0.05); border: 1px solid #eee;">
+<section class="container" style="margin-top: 80px; margin-bottom: 40px;">
+    <div style="display: flex; flex-wrap: nowrap; overflow-x: auto; scroll-snap-type: x mandatory; -webkit-overflow-scrolling: touch; border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.05); border: 1px solid #eee; background: var(--white);">
         
-        <div style="background: var(--dark-green); color: white; padding: 40px; flex: 1; min-width: 300px;">
+        <div style="background: var(--dark-green); color: white; padding: 40px; flex: 0 0 100%; scroll-snap-align: start; box-sizing: border-box;">
             <h2 style="color: var(--honey);">Expert Guidance</h2>
             <p>Do you have a complex question about herb-drug interactions or building a specific protocol?</p>
             <ul style="list-style: none; padding: 0; margin-top: 20px; line-height: 2;">
@@ -492,11 +504,14 @@
                 <li><i class="fa-solid fa-check-double" style="color: var(--honey);"></i> Safety-first approach</li>
                 <li><i class="fa-solid fa-check-double" style="color: var(--honey);"></i> Personalized synergy tips</li>
             </ul>
+            <p style="margin-top: 30px; font-size: 0.8rem; color: var(--honey); font-weight: bold;" class="mobile-only">
+                Swipe to Message <i class="fa-solid fa-arrow-right"></i>
+            </p>
         </div>
 
-        <div style="padding: 40px; flex: 2; min-width: 300px;">
+        <div style="padding: 40px; flex: 0 0 100%; scroll-snap-align: start; box-sizing: border-box; background: white;">
             <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
+                <div style="display: grid; grid-template-columns: 1fr; gap: 15px;">
                     <div>
                         <label style="display:block; font-size: 0.8rem; font-weight: bold;">Name</label>
                         <input type="text" name="name" required style="width:100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
@@ -509,20 +524,20 @@
 
                 <div style="margin-top: 20px;">
                     <label style="display:block; font-size: 0.8rem; font-weight: bold;">Your Inquiry</label>
-                    <textarea name="message" rows="4" required style="width:100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;" placeholder="Describe your health goals or specific herb questions..."></textarea>
+                    <textarea name="message" rows="4" required style="width:100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;" placeholder="Describe your health goals..."></textarea>
                 </div>
 
                 <button type="submit" style="margin-top: 20px; background: var(--mid-green); color: white; border: none; padding: 12px 30px; border-radius: 8px; cursor: pointer; font-weight: bold; width: 100%;">
                     Send Clinical Inquiry
                 </button>
                 <p style="font-size: 0.7rem; color: #999; margin-top: 10px; text-align: center;">
-                    <i class="fa-solid fa-lock"></i> Your information is kept confidential and used only for consultation purposes.
+                    <i class="fa-solid fa-lock"></i> Confidential & Secure
                 </p>
             </form>
         </div>
     </div>
 </section>
-
+    
     <div class="disclaimer-box">
         <strong>MEDICAL DISCLAIMER:</strong> This site does not provide medical advice. 
         <br>
