--- a/remedy-pairing.html
+++ b/remedy-pairing.html
@@ -510,15 +510,15 @@
         </div>
 
         <div style="padding: 40px; flex: 0 0 100%; scroll-snap-align: start; box-sizing: border-box; background: white;">
-            <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+            <form action="https://formspree.io/f/xojdbzwd" method="POST">
                 <div style="display: grid; grid-template-columns: 1fr; gap: 15px;">
                     <div>
                         <label style="display:block; font-size: 0.8rem; font-weight: bold;">Name</label>
-                        <input type="text" name="name" required style="width:100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
+                        <input type="text" placeholder="Name" name="name" required style="width:100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
                     </div>
                     <div>
                         <label style="display:block; font-size: 0.8rem; font-weight: bold;">Email</label>
-                        <input type="email" name="email" required style="width:100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
+                        <input type="email" placeholder="email" name="email" required style="width:100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
                     </div>
                 </div>
 
