--- a/remedy-pairing.html
+++ b/remedy-pairing.html
@@ -433,7 +433,7 @@
 
 </section>
 
-<section class="container" style="margin-top: 40px;">
+<section class="container" style="margin-top: 40px; display: flex; flex-wrap: nowrap; overflow-x: auto">
     <div style="background: var(--dark-green); color: white; padding: 30px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
         <h3 style="color: var(--honey); border-bottom: 1px solid rgba(255,255,255,0.2); padding-bottom: 10px;">
             <i class="fa-solid fa-book"></i> The Science Glossary
@@ -518,7 +518,7 @@
                     </div>
                     <div>
                         <label style="display:block; font-size: 0.8rem; font-weight: bold;">Email</label>
-                        <input type="email" placeholder="email" name="email" required style="width:100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
+                        <input type="email" placeholder="Email" name="email" required style="width:100%; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
                     </div>
                 </div>
 
