--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@ body.dark-theme .recent-tag {
             <div class="blog-content">
                 <span class="blog-date">Jan 20, 2026</span>
                 <h3>The 5 Best Morning Rituals with Herbs</h3>
-                <p>Learn how to kickstart your metabolism using ginger and lemon infusions...</p>
+                <p style="display: flex; flex-wrap: nowrap; overflow-x: auto">Learn how to kickstart your metabolism using ginger and lemon infusions...</p>
                 <a href="rituals.html" class="blog-link">Read Article <i class="fa-solid fa-arrow-right"></i></a>
             </div>
         </div>
@@ -828,7 +828,7 @@ body.dark-theme .recent-tag {
             <div class="blog-content">
                 <span class="blog-date">Jan 15, 2026</span>
                 <h3>Understanding Adaptogens</h3>
-                <p>A deep dive into how Ashwagandha and Holy Basil help your body manage stress...</p>
+                <p style="display: flex; flex-wrap: nowrap; overflow-x: auto">A deep dive into how Ashwagandha and Holy Basil help your body manage stress...</p>
                 <a href="adaptogens.html" class="blog-link">Read Article <i class="fa-solid fa-arrow-right"></i></a>
             </div>
         </div>
