--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@ body.dark-theme .recent-tag {
     <a href="blog.html">Blog</a>
     <a href="about.html">About</a>
     <a href="#contact">Contact</a>
+    <a href="resources.html">Resources</a>
 </nav>
 
     <section id="seasonalBanner" class="seasonal-banner">
