--- a/resources.html
+++ b/resources.html
@@ -179,11 +179,15 @@
         </a>
 
         <div style="display: flex; align-items: center;">
-            <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="remedy-pairing.html">Synergy Guide</a>
-                <a href="resources.html">Resources</a>
-            </div>
+                    <div class="nav-links">
+    <a href="index.html#home">Home</a>
+    <a href="index.html#remedies">Remedies</a>
+    <a href="remedy-pairing.html">Parings</a>
+    <a href="blog.html">Blog</a>
+    <a href="about.html">About</a>
+    <a href="index.html#contact">Contact</a>
+    <a href="resources.html">Resources</a>
+                    </div>
 
             <div class="search-wrapper">
                 <input type="text" id="site-search" placeholder="Search...">
