--- a/resources.html
+++ b/resources.html
@@ -187,7 +187,7 @@
 
     </div>
 
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px;">
+    <div style="margin: 10px; display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px;">
         <a href="remedy-pairing.html#printableChecklist" class="resource-card">
             <div style="color: var(--honey); font-size: 2rem; margin-bottom: 10px;"><i class="fa-solid fa-file-pdf"></i></div>
             <h3>Master Synergy Checklist</h3>
@@ -207,7 +207,7 @@
         </a>
     </div>
 
-    <section id="studies" style="margin-top: 80px;">
+    <section id="studies" style="margin: 10px; margin-top: 60px;">
         <div style="background: var(--white); border-radius: 15px; padding: 30px; border: 1px solid #eee; overflow-x: auto;">
             <h2 style="color: var(--dark-green); border-bottom: 2px solid var(--honey); padding-bottom: 10px;"><i class="fa-solid fa-microscope"></i> Research Database</h2>
             <table style="width: 100%; border-collapse: collapse; margin-top: 20px; min-width: 600px;">
@@ -237,7 +237,7 @@
         </div>
     </section>
 
-    <section style="margin-top: 60px;">
+    <section style="margin: 10px; margin-top: 50px;">
         <div style="background: var(--cream); border-radius: 15px; padding: 35px; border: 1px solid #e9e4d4;">
             <h2 style="color: var(--dark-green); margin-top: 0;"><i class="fa-solid fa-book-medical"></i> Glossary</h2>
             <dl>
